# db_copier

./: .gitignore  LICENSE  README.md  app.py  config.yaml  db_copier.py  dbcopy.db  index.html  models.py  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  translations.py  tsconfig.json  vite.config.ts
.github/workflows/: branch-select.yml  release.yml
src/: App.vue  README.md  auto-imports.d.ts  components.d.ts  env.d.ts  main.ts  router.ts  styles.css  typed-router.d.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/configs/: test1.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  monitor.rs  storage.rs
src-tauri/src/database/: db.rs  db_client.rs  mod.rs  models.rs
src-tauri/src/services/: command.rs  db_copier.rs  mod.rs  storage.rs
src-tauri/src/services/commands/: config.rs  connection.rs  mod.rs  task.rs  types.rs
src-tauri/src/utils/: logger.rs  mod.rs
src/components/: ConfigList.vue  ConfigManager.vue  DatabaseConfig.vue  LanguageSwitcher.vue  README.md  SSHConfig.vue  TableConfig.vue  TaskStatusTag.vue
src/components/common/: BaseButton.vue  BaseCard.vue  BaseTable.vue  index.ts
src/constants/: index.ts
src/hooks/: index.ts  useLoading.ts  useNotification.ts
src/i18n/: index.ts
src/layouts/: default.vue
src/pages/: ConfigDetail.vue  ConfigManager.vue  TaskManager.vue  index.vue  tasks.vue
src/services/: api.ts  index.ts
src/store/: index.ts
src/styles/: global.css
src/types/: index.ts
src/utils/: error.ts  index.ts  storage.ts
templates/: index.html
(+7 files in other folders)
