[package]
name = "db_copier"
version = "0.1.0"
description = "Database Copy Tool"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "db_copier_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["runtime"] }
ssh2 = "0.9"
thiserror = "2.0.11"
log = "0.4"
env_logger = "0.11"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres"] }
futures = "0.3"
chrono = "0.4"
sha2 = "0.10"
native-tls = "0.2"
postgres-native-tls = "0.5"

[features]
custom-protocol = ["tauri/custom-protocol"]

